ustawiono wersję docelową w pliku pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 					<version>2.3.2</version>
 					<configuration>
 						<source>1.6</source>
-						<compilerArgument/>
+						<target>1.6</target>
+						<compilerArgument></compilerArgument>
 					</configuration>
 				</plugin>
 			</plugins>
