--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>h2</artifactId>
 			<version>1.2.145</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
