--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>1.0.2.Final</version>
         </dependency>
         <dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		    <scope>provided</scope>
+		</dependency>
+        <dependency>
             <groupId>org.jboss.spec.javax.jms</groupId>
             <artifactId>jboss-jms-api_1.1_spec</artifactId>
             <version>1.0.1.Final</version>
