Commit from JBoss Tools

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     
      <login-config>
         <auth-method>BASIC</auth-method>
-        <realm-name>Java EE Login</realm-name>
+        <realm-name>IOSR Market</realm-name>
     </login-config>
     
     <security-role>
