--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,18 @@
             </user-data-constraint>
     </security-constraint>
     
-     <login-config>
+     <!-->login-config>
         <auth-method>BASIC</auth-method>
         <realm-name>IOSR Market</realm-name>
+    </login-config!-->
+    
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>IOSR Market</realm-name>
+        <form-login-config>
+            <form-login-page>/login.xhtml</form-login-page>
+            <form-error-page>/error.xhtml</form-error-page>
+        </form-login-config>
     </login-config>
     
     <security-role>
