--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,11 +12,11 @@
         <param-value>Development</param-value>
 </context-param>
 
-<!-->servlet>
+<servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
-</servlet-->
+</servlet>
 
 <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
