--- a/.openshift/config/roles.properties
+++ b/.openshift/config/roles.properties
@@ -1,2 +1,3 @@
-user1=guest,WIG20,WIG
-user2=guest,WIG
+user1=guest,PZU, PKO_BP, KGHM_POLSKA_MIEDZ_SA, PEKAO
+user2=guest,PZU, PKO_BP, KGHM_POLSKA_MIEDZ_SA, PEKAO, PKN_ORLEN, PGE, PGNIG, LPP
+
