--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,24 @@
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+						<plugin>
+							<groupId>org.sonatype.maven.plugin</groupId>
+							<artifactId>emma-maven-plugin</artifactId>
+							<version>1.1</version>
+							<executions>
+								<execution>
+									<phase>process-classes</phase>
+									<goals>
+										<goal>instrument</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+						  <groupId>org.codehaus.mojo</groupId>
+						  <artifactId>cobertura-maven-plugin</artifactId>
+						  <version>2.5.2</version>
+						</plugin>
         </plugins>
     </build>
     <profiles>
