--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,41 @@
 						  <version>2.5.2</version>
 						</plugin>
         </plugins>
+        <pluginManagement>
+        	<plugins>
+        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        		<plugin>
+        			<groupId>org.eclipse.m2e</groupId>
+        			<artifactId>lifecycle-mapping</artifactId>
+        			<version>1.0.0</version>
+        			<configuration>
+        				<lifecycleMappingMetadata>
+        					<pluginExecutions>
+        						<pluginExecution>
+        							<pluginExecutionFilter>
+        								<groupId>
+        									org.sonatype.maven.plugin
+        								</groupId>
+        								<artifactId>
+        									emma-maven-plugin
+        								</artifactId>
+        								<versionRange>
+        									[1.1,)
+        								</versionRange>
+        								<goals>
+        									<goal>instrument</goal>
+        								</goals>
+        							</pluginExecutionFilter>
+        							<action>
+        								<ignore></ignore>
+        							</action>
+        						</pluginExecution>
+        					</pluginExecutions>
+        				</lifecycleMappingMetadata>
+        			</configuration>
+        		</plugin>
+        	</plugins>
+        </pluginManagement>
     </build>
     <profiles>
         <profile>
