--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,8 +37,15 @@
                 <transport-guarantee>CONFIDENTIAL</transport-guarantee>
             </user-data-constraint>
     </security-constraint>
-    
-     <!-->login-config>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>static</web-resource-name>
+            <url-pattern>/images/*</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
+
+    <!-->login-config>
         <auth-method>BASIC</auth-method>
         <realm-name>IOSR Market</realm-name>
     </login-config!-->
